Updates and deeltions

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -40,49 +40,41 @@ collections:
         required: false
         # BEGIN_AUTO_TYPE_OPTIONS
         options:
-          - "Announcement"
           - "art criticism"
-          - "article"
           - "book"
           - "book chapter"
-          - "book launch"
-          - "case study"
+          - "CFP"
           - "commentary"
           - "conference"
-          - "conference paper"
           - "conference presentation"
+          - "conference proceedings"
           - "curatorial"
-          - "Discussion panel"
-          - "Essay"
-          - "Guest lecture"
-          - "invited lecture"
-          - "invited lecture and discussion"
-          - "journal article"
-          - "journal special issue"
+          - "event"
           - "keynote"
-          - "Keynote lecture"
-          - "Monograph"
-          - "Panel discussion"
-          - "Plenary talk"
+          - "panel discussion"
           - "podcast"
           - "public lecture"
-          - "public talk"
           - "research article"
+          - "screening"
           - "special issue"
-          - "Symposium presentation"
           - "workshop"
         # END_AUTO_TYPE_OPTIONS
         allow_add: true
+      - label: "New type"
+        name: "newType"
+        widget: "string"
+        required: false
+        hint: "Optional: enter a new type if none of the existing options apply. This will be saved and added to the list."
       - { label: "Year", name: "year", widget: "number", required: false }
       - label: "Full date (for ordering)"
         name: "fullDate"
         widget: "datetime"
         required: false
         date_format: "YYYY-MM-DD"
-        time_format: "HH:mm"
-        format: "YYYY-MM-DD HH:mm"
+        time_format: false
+        format: "YYYY-MM-DD"
         picker_utc: true
-        hint: "Sorting uses this; include time if you want precise ordering."
+        hint: "Used for ordering; YYYY-MM-DD."
       - { label: "Featured on front page", name: "featured", widget: "boolean", default: false, required: false }
       - { label: "Pinned (homepage hero)", name: "pinned", widget: "boolean", default: false, required: false, hint: "Only one entry should be pinned; the latest pinned item becomes the homepage hero." }
       - { label: "Summary", name: "summary", widget: "text", required: false }
@@ -115,7 +107,6 @@ collections:
           - "commons"
           - "computer art"
           - "conceptual art"
-          - "conference"
           - "copyright"
           - "COVID-19"
           - "creative agency"
@@ -128,9 +119,7 @@ collections:
           - "cycling"
           - "DAOs"
           - "decentralisation"
-          - "decentralised autonomous organisations"
           - "deepfakes"
-          - "design"
           - "digital art"
           - "digital commons"
           - "digital_storytelling"
@@ -143,22 +132,17 @@ collections:
           - "game art"
           - "game studies"
           - "gamification"
-          - "GANs"
+          - "GAN"
           - "global warming"
-          - "guest speaker"
           - "hyperobjects"
-          - "image recognition"
           - "improvisation"
           - "intellectual property"
           - "interactive artwork"
           - "interdisciplinarity"
-          - "interface experiments"
-          - "interfaces"
-          - "IP"
+          - "interface"
           - "law"
-          - "legal theory"
-          - "licensing"
           - "live coding"
+          - "machine vision"
           - "machinima"
           - "media art"
           - "media art history"
@@ -166,7 +150,7 @@ collections:
           - "metaverse"
           - "MoneyLab"
           - "music"
-          - "mystifying AI"
+          - "mystification of AI"
           - "NFTs"
           - "non-human agency"
           - "online teaching"
@@ -176,29 +160,32 @@ collections:
           - "performance art"
           - "performances"
           - "photography"
-          - "postgraduate"
+          - "postgraduate research"
           - "posthumanism"
           - "publishing"
-          - "research"
           - "research network"
+          - "residency"
           - "RPG"
           - "smart contracts"
           - "sound art"
-          - "special issue"
-          - "symposium"
           - "tactical AI"
           - "tactical media"
-          - "talk"
           - "teaching materials"
           - "token-gating"
           - "Twine"
-          - "virtual Reality"
+          - "video"
+          - "video art"
           - "visual indeterminacy"
           - "VR"
           - "workshop"
         # END_AUTO_TAG_OPTIONS
         allow_add: true
         required: false
+      - label: "New tags"
+        name: "newTags"
+        widget: "string"
+        required: false
+        hint: "Optional: add one or more new tags, separated by commas. They will be saved and added to the list."
       - label: "Images (paths)"
         name: "images"
         widget: "list"
