Couple of updates

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -155,6 +155,7 @@ collections:
           - "non-human agency"
           - "online teaching"
           - "Open Access"
+          - "open source"
           - "ownership"
           - "perception"
           - "performance art"
