--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,6 +4,8 @@ local_backend:
 backend:
   name: git-gateway
   branch: main
+  identity_url: https://marjz.netlify.app/.netlify/identity
+  gateway_url: https://marjz.netlify.app/.netlify/git
 
 media_folder: "assets/uploads"
 public_folder: "assets/uploads"
