--- a/admin/config.yml
+++ b/admin/config.yml
@@ -127,6 +127,7 @@ collections:
           - "digital art"
           - "digital commons"
           - "digital_storytelling"
+          - "distributed agency"
           - "educational licensing"
           - "electronic music"
           - "exhibition"
@@ -157,9 +158,11 @@ collections:
           - "mystification of AI"
           - "NFTs"
           - "non-human agency"
+          - "NPC"
           - "online teaching"
           - "Open Access"
           - "open source"
+          - "Orpheus Institute"
           - "ownership"
           - "perception"
           - "performance art"
