--- a/admin/config.yml
+++ b/admin/config.yml
@@ -56,6 +56,7 @@ collections:
           - "event"
           - "keynote"
           - "panel discussion"
+          - "performance"
           - "podcast"
           - "public lecture"
           - "research article"
